Fix sonarlint warnings